// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailConfirmation.jsx renders for login correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="message-body"
      >
        <div>
          <div>
            <span
              class="icon is-normal"
            >
              <i
                aria-hidden="true"
                class="fa fa-exclamation-triangle is-size-3 has-text-warning "
              />
            </span>
          </div>
          <p
            class="is-size-4"
          >
            You have not confirmed your account
          </p>
          <p
            class="is-size-6"
          >
            Your account needs to be confirmed for you to use worksfair. Find the confirmation email in your inbox.
          </p>
          <p
            class="margin-top-25"
          >
            <button
              class="button is-info is-outlined"
            >
              Resend Email
            </button>
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="message-body"
    >
      <div>
        <div>
          <span
            class="icon is-normal"
          >
            <i
              aria-hidden="true"
              class="fa fa-exclamation-triangle is-size-3 has-text-warning "
            />
          </span>
        </div>
        <p
          class="is-size-4"
        >
          You have not confirmed your account
        </p>
        <p
          class="is-size-6"
        >
          Your account needs to be confirmed for you to use worksfair. Find the confirmation email in your inbox.
        </p>
        <p
          class="margin-top-25"
        >
          <button
            class="button is-info is-outlined"
          >
            Resend Email
          </button>
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`EmailConfirmation.jsx renders for signup correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="message-body"
      >
        <div>
          <div>
            <span
              class="icon is-normal"
            >
              <i
                aria-hidden="true"
                class="fa fa-paper-plane-o is-size-3 has-text-info "
              />
            </span>
          </div>
          <p
            class="is-size-4"
          >
            We have sent you an email
          </p>
          <p
            class="is-size-6"
          >
            Your account needs to be confirmed for you to use worksfair. Find the confirmation email in your inbox.
          </p>
          <p
            class="margin-top-25"
          >
            <button
              class="button is-info is-outlined"
            >
              Resend Email
            </button>
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="message-body"
    >
      <div>
        <div>
          <span
            class="icon is-normal"
          >
            <i
              aria-hidden="true"
              class="fa fa-paper-plane-o is-size-3 has-text-info "
            />
          </span>
        </div>
        <p
          class="is-size-4"
        >
          We have sent you an email
        </p>
        <p
          class="is-size-6"
        >
          Your account needs to be confirmed for you to use worksfair. Find the confirmation email in your inbox.
        </p>
        <p
          class="margin-top-25"
        >
          <button
            class="button is-info is-outlined"
          >
            Resend Email
          </button>
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
